# simpson

./: .gitignore  CMakeLists.txt  README.md
example_shapes/: CMakeLists.txt  main.cpp
example_shapes/include/: Circle.h  EquilateralTriangle.h  Rectangle.h  Shape.h  Square.h
example_shapes/src/: Circle.cpp  EquilateralTriangle.cpp  Rectangle.cpp  RegularPolygon.cpp  Shape.cpp  Square.cpp
example_simple/: CMakeLists.txt  main.cpp
example_simple_register_name/: CMakeLists.txt  main.cpp
example_template_type/: CMakeLists.txt  main.cpp
serialization/: CMakeLists.txt  Doxyfile  README.md
serialization/include/: Deserializer.h  IDeserializer.h  ISerializable.h  ISerializable.h.autosave  ISerializableFactory.h  ISerializer.h  IStorageIn.h  IStorageOut.h  SerializableTypeMacros.h  SerializableTypes.h  Serialization.h  SerializationToStream.h  Serializer.h  Serializers.h  Simpson.h  StorageReadStream.h  StorageWriteStream.h  StreamDeserializer.h  StreamSerializer.h  StreamStorageIn.h  StreamStorageOut.h
serialization/include_api/: Simpson.h  StreamSerialization.h
serialization/include_core/: IDeserializer.h  ISerializable.h  ISerializableFactory.h  ISerializer.h  IStorage.h  IStorageRead.h  IStorageWrite.h  SerializableTypeMacros.h  SimpsonMacros.h  SimpsonUtilities.h
serialization/include_private/: Deserializer.tpp  PolymorphicBaseClass.h  SerializableTypeMacros.h  Serialization.h  SerializationUtilities.h  Serialize.h  Serializer.tpp  StorageReadStream.h  StorageWriteStream.h  StreamDeserializer.h  StreamDeserializer.tpp  StreamReadStorage.h  StreamSerializer.h  StreamSerializer.tpp  StreamWriteStorage.h
serialization/src/: SerializableTypes.cpp  Serialization.cpp  SerializationToStream.cpp  SerializationUtilities.cpp  Serialize.cpp  Serializers.cpp  SimpsonStreamSerialization.cpp  StorageReadStream.cpp  StorageWriteStream.cpp  StreamDeserializer.cpp  StreamSerialization.cpp  StreamSerializer.cpp  StreamStorageIn.cpp  StreamStorageOut.cpp
shapes/: CMakeLists.txt  main.cpp
shapes/include/: EquilateralTriangle.h  Rectangle.h  Shape.h  Square.h
shapes/src/: Circle.cpp  EquilateralTriangle.cpp  Rectangle.cpp  RegularPolygon.cpp  Shape.cpp  Square.cpp
simpson/: CMakeLists.txt
simpson/include_api/: Simpson.h  StreamOperators.h
simpson/include_core/: IStorage.h  PolymorphicBaseClass.h  SimpsonUtilities.h
simpson/src/: SimpsonStreamSerialization.cpp  SimpsonUtilities.cpp  StreamReadStorage.cpp  StreamWriteStorage.cpp
src/: Circle.cpp  Circle.h  EquilateralTriangle.cpp  EquilateralTriangle.h  ISerializable.h  IStreamable.cpp  IStreamable.h  IStreamableFactory.h  Position2D.h  Rectangle.cpp  Rectangle.h  RegisterTypeMacro.h  RegularPolygon.cpp  RegularPolygon.h  SerializableTypeMacros.h  Serialization.h  Serializers.cpp  Serializers.h  Shape.cpp  Shape.h  ShapeHelpers.h  Square.cpp  Square.h  Streamable.cpp  Streamable.h  VirtualBase.h  main.cpp
